# lpinterface

./: .clang-tidy  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  Readme.md  _formulas.tex  annotated.html  badge_8hpp_source.html  classes.html  classlpint_1_1Column-members.html  classlpint_1_1Column.html  classlpint_1_1FailedToSetParameterException-members.html  classlpint_1_1FailedToSetParameterException.html  classlpint_1_1GurobiException-members.html  classlpint_1_1GurobiException.html  classlpint_1_1GurobiSolver-members.html  classlpint_1_1GurobiSolver.html  classlpint_1_1ILinearProgramHandle-members.html  classlpint_1_1ILinearProgramHandle.html  classlpint_1_1InvalidMatrixEntryException-members.html  classlpint_1_1InvalidMatrixEntryException.html  classlpint_1_1InvalidVariableBoundsException-members.html  classlpint_1_1InvalidVariableBoundsException.html  classlpint_1_1LinearProgramHandleGurobi-members.html  classlpint_1_1LinearProgramHandleGurobi.html  classlpint_1_1LinearProgramHandleSoplex-members.html  classlpint_1_1LinearProgramHandleSoplex.html  classlpint_1_1LinearProgramSolver-members.html  classlpint_1_1LinearProgramSolver.html  classlpint_1_1LpException-members.html  classlpint_1_1LpException.html  classlpint_1_1MatrixEntry-members.html  classlpint_1_1MatrixEntry.html  classlpint_1_1MismatchedDimensionsException-members.html  classlpint_1_1MismatchedDimensionsException.html  classlpint_1_1ModelNotSolvedException-members.html  (+59 more)
cmake/: FindGUROBI.cmake  clang-cxx-dev-tools.cmake  gmock.cmake  gtest.cmake
doc/: config
docs/: config
examples/: CMakeLists.txt  common.hpp  lp_simple.cc  lp_simple.cpp  mip_simple.cpp  mip_simple_gurobi.cpp  nqueens.cc
include/: common.hpp  lpinterface.hpp
include/lpinterface/: badge.hpp  common.hpp  data_objects.hpp  errors.hpp  lp.hpp  lp_flush_raw_data.hpp  lp_impl.hpp  lpinterface.hpp  parameter_type.hpp  sparse_matrix.hpp
include/lpinterface/cplex/: lphandle_cplex.hpp  lpinterface_cplex.hpp  lputil_cplex.hpp
include/lpinterface/detail/: util.hpp
include/lpinterface/expected/: expected.hpp
include/lpinterface/gurobi/: lphandle_gurobi.hpp  lpinterface_gurobi.hpp  lputil_gurobi.hpp
include/lpinterface/soplex/: lphandle_soplex.hpp  lpinterface_soplex.hpp  lputil_soplex.hpp
include/util/: container.hpp
lib/: bitmask.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  (+28 more)
src/: CMakeLists.txt  data_objects.hpp  errors.hpp  lp.hpp  lp_impl.cc  lp_impl.hpp  lpinterface.h  lpinterface.hpp  lpinterface_gurobi.cc  lpinterface_gurobi.h  lpinterface_gurobi.hpp  lpinterface_lib.cc  parameter_type.hpp
src/cplex/: lphandle_cplex.cc  lpinterface_cplex.cc
src/gurobi/: lphandle_gurobi.cc  lpinterface_gurobi.cc  lpinterface_gurobi.hpp
src/soplex/: lphandle_soplex.cc  lpinterface_soplex.cc
tests/: CMakeLists.txt  generators.hpp  mock_lp.hpp  mock_lpsolver.hpp  test.cc  test_common.hpp  test_data_objects.cc  test_gurobi.cc  test_solvers.cc  test_soplex.cc  test_sparse_matrix.cc  testutil.hpp
